# TecnicasProgra

./: CMakeLists.txt  TecnicasProgra.sln  Untitled-1.cpp
TecnicasProgra/: CMakeLists.txt  Source.cpp  TecnicasProgra.vcxproj  Window.cpp  Window.h  main.cpp
TecnicasProgra/Graphics/: BaseBuffers.h  DepthStencilView.h  GraphicsAPI.cpp  GraphicsAPI.h  SwapChain.h  Topology.h  VertexBuffer.h  VertexShader.h
TecnicasProgra/src/: Window.h
TecnicasProgra/src/Display/: Window.cpp  Window.h
TecnicasProgra/src/Graphics/: BaseBuffers.h  BaseShader.h  ConstantBuffer.h  GraphicGenerals.h  GraphicsAPI.cpp  GraphicsAPI.h  IndexBuffer.h  PixelShader.h  ViewPort.h
TecnicasProgra/src/Graphics/Dx11/: DX11GraphicsAPI.cpp  DX11GraphicsAPI.h  Dx11ConstantBuffer.cpp  Dx11ConstantBuffer.h  Dx11IndexBuffer.h  Dx11SwapChain.h  Dx11VertexBuffer.h
TecnicasProgra/src/Main/: main.cpp
